--- a/vanilla-ts/package.json
+++ b/vanilla-ts/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
